trunk/Archive2/4d/adf0da0374e92e/output
g++
gcc
main.cpp:5:1: error: initializer element is not constant
 char b1 = x1 ^ y1;
 ^
clang++
clang
main.cpp:5:11: error: initializer element is not a compile-time constant
char b1 = x1 ^ y1;
          ^~~~~~~
1 error generated.
