trunk/Archive2/4d/adf0da0374e92e/main.cpp
char a1 = 'x' ^ 'y';

char x1 = 'x';
char y1 = 'y';
char b1 = x1 ^ y1;


int main()
{
}
